--- a/WordPress/trunk/modules/wordpress/ReadMe.en
+++ b/WordPress/trunk/modules/wordpress/ReadMe.en
@@ -58,6 +58,8 @@ XOOPS_ROOT_PATH
 ------------
 ChangeLog
 ------------
+0.5.0RC3 [2005-05-07]
+------ Preparing now -----
 0.3.3  [2004-10-24]
 Added Features)
 -Add Option to Recent Comment Block
